# BDS_MGNN

./: .gitignore  MGNN_Model.ipynb  PAPER_ABSTRACT.md  README.md  commands.txt  context_dump.md  experiment_tracking.py  generate_all_visualizations.py  phase1_spark_prepare.py  phase2_optional_validation.py  phase2a_feature_engineering.py  phase2b_sample_nodes.py  phase3a_temporal.py  phase3b_similarity.py  phase3b_similarity_fast.py  phase3c_combine.py  phase4_export_pyg.py  phase5_train_mgnn.py  phase5b_diag.py  phase5b_sign_precompute.py  phase5c_graph_structural_diag.py  phase5c_sign_student.py  pipeline_utils.py  presentation_slides.md  pyproject.toml  realtime_inference_benchmark.py  requirements.txt  run_ablation_scale.py  run_adversarial_robustness.py  run_analytics_and_student.ps1  run_component_ablation.py  run_differential_training.py  run_feature_saliency.py  run_graph_scaling_ablation.py  run_graph_structural_analysis.py  run_model_benchmarks.py  run_pyspark_scaling_study.py  run_research_pipeline.py  run_roc_analysis.py  run_streaming_graph_engine.py  (+6 more)
configs/: research.yaml
paper_latex/: main.tex
