[project]
name = "mgnn-bds"
version = "0.1.0"
description = "Scalable Distributed Intrusion Detection using Apache Spark and Graph-Based Interpretable AI (MGNN)"
readme = "phases/README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pyspark>=3.5.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "torch",
  "torchvision",
  "torchaudio",
  "faiss-cpu>=1.13.2",
  "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
url = "https://pypi.org/simple"

