[project]
name = "mgnn-bds"
version = "0.1.0"
description = "Scalable Distributed Intrusion Detection using Apache Spark and Graph-Based Interpretable AI (MGNN)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "pyspark>=3.5.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "torch",
  "pyarrow>=24.0.0",
  "omegaconf>=2.3.0",
  "scikit-learn>=1.4.0",
  "torch-geometric>=2.6.0,<2.8.0",
  "xgboost>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
url = "https://pypi.org/simple"
